--- a/Footer/src/style.module.css
+++ b/Footer/src/style.module.css
@@ -11,3 +11,14 @@
   border: solid white 2px;
   border-radius: 50%;
 }
+
+.button {
+  background-color: black;
+  color: white;
+}
+
+.button:hover {
+  cursor: pointer;
+  background-color: white;
+  color: black
+}
