--- a/OverviewPhoto/client/src/overview.module.css
+++ b/OverviewPhoto/client/src/overview.module.css
@@ -1,3 +1,23 @@
 .body {
-  color: blue
+  margin: 0;
+  overflow: hidden;
+}
+
+.photos {
+  display: block;
+  float: left;
+  width: 25%
+}
+
+.photo {
+  width: 100%;
+  height: 300px;
+  transform:  scale(1);
+  transition: transform 0.5s;
+}
+
+.photo:hover {
+  opacity: 0.9;
+  filter: brightness(90%);
+  transform: scale(1.03)
 }
