--- a/OverviewPhoto/client/src/overview.module.css
+++ b/OverviewPhoto/client/src/overview.module.css
@@ -1,6 +1,7 @@
 .body {
   margin: 0;
   overflow: hidden;
+  width: 100%
 }
 
 .photos {
@@ -20,4 +21,9 @@
   opacity: 0.9;
   filter: brightness(90%);
   transform: scale(1.03)
+}
+
+.img {
+  height: 350px;
+  width: 350px;
 }
