--- a/OverviewPhoto/client/src/overview.module.css
+++ b/OverviewPhoto/client/src/overview.module.css
@@ -1,12 +1,16 @@
 .body {
+  position: relative;
+}
+.photodiv {
   margin: 0;
   overflow: hidden;
-  width: 100%
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
 }
 
 .photos {
-  display: block;
-  float: left;
+  display: flex;
   width: 25%
 }
 
@@ -14,7 +18,7 @@
   width: 100%;
   height: 300px;
   transform:  scale(1);
-  transition: transform 0.5s;
+  transition: transform 0.7s;
 }
 
 .photo:hover {
@@ -26,4 +30,17 @@
 .img {
   height: 350px;
   width: 350px;
+}
+
+.button {
+  font-size: 11px;
+  color: #ffffff;
+  opacity: 0.8;
+  position: fixed;
+  right: 50px;
+  top: 130px;
+}
+
+.button:hover {
+  background-color: #000;
 }
