--- a/OverviewPhoto/client/src/overview.module.css
+++ b/OverviewPhoto/client/src/overview.module.css
@@ -46,3 +46,28 @@
 .button:hover {
   background-color: #000;
 }
+
+.modalfull {
+  min-width: 100%;
+  margin: 0;
+  min-height: 100vh;
+}
+
+.modalcontent {
+  background-color: #343434;
+  color: #ffffff;
+  min-height: 100vh;
+  pointer-events: auto;
+}
+
+.modalheader {
+  align-items: center;
+  display: inline;
+  padding: 1rem;
+}
+
+.closebutton {
+  position: fixed;
+  right: 1%;
+  top: 2%;
+}
