--- a/OverviewPhoto/client/src/overview.module.css
+++ b/OverviewPhoto/client/src/overview.module.css
@@ -10,7 +10,7 @@
 }
 
 .photos {
-  display: flex;
+  display: inline-flex;
   width: 25%
 }
 
@@ -47,23 +47,45 @@
   background-color: #000;
 }
 
+.modal {
+  min-height: 100%;
+  left: 0;
+  position: fixed;
+  top: 0;
+  min-width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 .modalfull {
   min-width: 100%;
   margin: 0;
   min-height: 100vh;
+  position: fixed;
+  overflow-y: auto;
 }
+
+/* .modalheader {
+  padding: 1rem;
+  border-bottom: 1px solid #343434;
+  position: fixed;
+  top: 2%;
+} */
 
 .modalcontent {
   background-color: #343434;
   color: #ffffff;
   min-height: 100vh;
   pointer-events: auto;
+  overflow-y: auto
 }
 
 .modalheader {
-  align-items: center;
-  display: inline;
+  background-color: #343434;
+  color: #ffffff;
+  display: block;
   padding: 1rem;
+  border-bottom: 1px solid #343434;
 }
 
 .closebutton {
