--- a/OverviewPhoto/client/src/overview.module.css
+++ b/OverviewPhoto/client/src/overview.module.css
@@ -11,25 +11,26 @@
 
 .photos {
   display: inline-flex;
-  width: 25%
+  width: 25%;
 }
+/* @media width 50% for small screen */
 
 .photo {
-  width: 100%;
+  max-width: 100%;
   height: 300px;
-  transform:  scale(1);
-  transition: transform 0.7s;
+  transform:  scale(0.97);
+  transition: transform 0.8s;
 }
 
 .photo:hover {
   opacity: 0.9;
   filter: brightness(90%);
-  transform: scale(1.03)
+  transform: scale(1)
 }
 
 .img {
-  height: 350px;
-  width: 350px;
+  height: 100%;
+  width: 100%;
 }
 
 .button {
@@ -57,19 +58,21 @@
   flex-direction: column;
 }
 
-.modalfull {
+/* .modalfull {
   min-width: 100%;
   margin: 0;
   min-height: 100vh;
-}
+} */
 
 .modalcontent {
   background-color: #343434;
   color: #ffffff;
+  min-height: 100vh;
   max-height: 100vh;
   pointer-events: auto;
   position: absolute;
   overflow-y: auto;
+  bottom: 0.5px ;
 }
 
 .modalheader {
