--- a/OverviewPhoto/client/src/overview.module.css
+++ b/OverviewPhoto/client/src/overview.module.css
@@ -83,4 +83,17 @@
   position: fixed;
   right: 2%;
   top: 2%;
+  -webkit-appearance: none;
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 1;
+  opacity: 0.7;
+  border: none;
+  transform: scale(0.98);
+  transition: opacity 0.8s transform 0.8s ;
+}
+.closebutton:hover {
+  cursor: pointer;
+  opacity: 1;
+  transform: scale(1.03)
 }
