--- a/OverviewPhoto/client/src/overview.module.css
+++ b/OverviewPhoto/client/src/overview.module.css
@@ -12,12 +12,19 @@
 .photos {
   display: inline-flex;
   width: 25%;
+  overflow: hidden;
 }
 /* @media width 50% for small screen */
 
+.modalphotos {
+  display: inline-flex;
+  width: 33%;
+  height: calc(width)
+}
+
 .photo {
-  max-width: 100%;
-  height: 300px;
+  width: 100%;
+  min-height: 100%;
   transform:  scale(0.97);
   transition: transform 0.8s;
 }
