--- a/OverviewPhoto/client/src/overview.module.css
+++ b/OverviewPhoto/client/src/overview.module.css
@@ -1,135 +1,3 @@
 .body {
-  position: relative;
+  color: blue
 }
-.photodiv {
-  margin: 0;
-  overflow: hidden;
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-}
-
-.photos {
-  display: inline-flex;
-  width: 25%;
-}
-/* @media width 50% for small screen */
-
-.photo {
-  max-width: 100%;
-  height: 300px;
-  transform:  scale(0.97);
-  transition: transform 0.8s;
-}
-
-.photo:hover {
-  opacity: 0.9;
-  filter: brightness(90%);
-  transform: scale(1)
-}
-
-.img {
-  height: 100%;
-  width: 100%;
-}
-
-.carouselimg {
-  height: 80vh;
-  background: rgba(0, 0, 0, 1);
-  display: block;
-}
-
-.button {
-  padding: 8px;
-  font-size: 11px;
-  color: #ffffff;
-  background-color: #343434;
-  opacity: 0.7;
-  position: fixed;
-  right: 50px;
-  top: 130px;
-}
-
-.button:hover {
-  background-color: #000;
-}
-
-.modal {
-  min-height: 100%;
-  left: 0;
-  position: fixed;
-  top: 0;
-  min-width: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-.modalcontent {
-  background: rgba(34, 34, 34, 0.95);
-  color: #ffffff;
-  width: 100%;
-  min-height: 100vh;
-  max-height: 100%;
-  pointer-events: auto;
-  position: absolute;
-  overflow-y: auto;
-  padding-bottom: 5rem;
-}
-
-.carouselmodal {
-  opacity: 1;
-  background: rgba(34, 34, 34, 0.9);
-}
-
-.modalheader {
-  background-color: #343434;
-  color: #ffffff;
-  display: block;
-  padding: 1.5rem;
-}
-
-
-.closebutton {
-  background-color: transparent;
-  position: fixed;
-  right: 1%;
-  top: 3%;
-  -webkit-appearance: none;
-  font-size: 1.5rem;
-  font-weight: 700;
-  line-height: 1;
-  opacity: 0.7;
-  border: none;
-  transform: scale(0.98);
-  transition: opacity 0.8s transform 0.8s ;
-}
-.closebutton:hover {
-  cursor: pointer;
-  opacity: 1;
-  transform: scale(1.03)
-}
-
-.slideshowView {
-  background-color: transparent;
-  position: fixed;
-  right: 4%;
-  top: 3%;
-  display: inline-block;
-  -webkit-appearance: none;
-  font-size: 1rem;
-  opacity: 0.7;
-  border-right: 1px solid #ffffff;
-  padding: 2px;
-  margin-right: 5px;
-}
-
-.modalicon {
-  margin-left: 5px;
-  margin-right: 10px;
-}
-
-.modalicon:hover {
-  cursor: pointer;
-  opacity: 1;
-}
-
