--- a/OverviewPhoto/client/src/overview.module.css
+++ b/OverviewPhoto/client/src/overview.module.css
@@ -19,12 +19,12 @@
 .modalphotos {
   display: inline-flex;
   width: 33%;
-  height: calc(width)
+  position: relative;
 }
 
 .photo {
   width: 100%;
-  min-height: 100%;
+  height: 100%;
   transform:  scale(0.97);
   transition: transform 0.8s;
 }
