--- a/OverviewPhoto/client/src/overview.module.css
+++ b/OverviewPhoto/client/src/overview.module.css
@@ -17,7 +17,6 @@
 /* @media width 50% for small screen */
 
 .modalphotos {
-  display: inline-flex;
   width: 33%;
   position: relative;
 }
@@ -38,6 +37,7 @@
 .img {
   height: 100%;
   width: 100%;
+  object-fit: cover;
 }
 
 .carouselimg {
@@ -54,7 +54,7 @@
   opacity: 0.7;
   position: absolute;
   right: 50px;
-  top: 130px;
+  top: 250px;
 }
 
 .button:hover {
@@ -82,6 +82,8 @@
   position: absolute;
   overflow-y: auto;
   padding-bottom: 5rem;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .carouselmodal {
