Add more styling

--- a/OverviewPhoto/client/src/overview.module.css
+++ b/OverviewPhoto/client/src/overview.module.css
@@ -82,6 +82,10 @@
   position: absolute;
   overflow-y: auto;
   padding-bottom: 5rem;
+  justify-content: center
+}
+
+.photomodalcontent{
   display: flex;
   flex-wrap: wrap;
 }
