--- a/OverviewPhoto/client/src/overview.module.css
+++ b/OverviewPhoto/client/src/overview.module.css
@@ -7,6 +7,7 @@
   width: 100%;
   display: flex;
   justify-content: space-around;
+  position: relative;
 }
 
 .photos {
@@ -53,8 +54,8 @@
   background-color: #343434;
   opacity: 0.7;
   position: absolute;
-  right: 50px;
-  top: 250px;
+  right: 5%;
+  top: 43%;
 }
 
 .button:hover {
